@@ -30,12 +30,17 @@ test {
     useJUnitPlatform()
 }
 
-var incubatorArguments = ["--add-modules", "jdk.incubator.vector"]
+//--enable-preview --add-modules jdk.incubator.foreign --add-modules jdk.incubator.vector
+var incubatorArguments = ["--add-modules", "jdk.incubator.vector", "--enable-preview"]
 tasks.withType(Test) { jvmArgs += incubatorArguments }
 tasks.withType(JavaCompile) { options.compilerArgs += incubatorArguments }
 
 jmh {
     jvmArgs = incubatorArguments
+}
+
+compileJmhJava {
+    options.compilerArgs += incubatorArguments
 }
 
 jmhRunBytecodeGenerator {
